fix: 测试改用 Arrays.asList 以兼容 Java 8
AuthServiceTest 使用了 List.of(...)(Java 9+ API),本地 JDK>=9 可编译,
但 CI 目标 Java 8 编译失败,导致 V2.2.0 release 流水线构建失败。
改为 Arrays.asList(已包在 new ArrayList<>(...) 内,语义一致)。

Co-Authored-By: Claude <noreply@anthropic.com>